--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		  始めまして.多様なプログラミング言語を勉強するのが好きな新入IT開発者パクヒョンウです。<br> <br>
 		  무엇인가에 집중하면 끝까지 포기하지 않고 도전하여 성장하는 사람입니다. <br>
 		  何かに夢中になれば最後まで諦めずに挑戦して成長する人です。 <br> <br>
-		  협업을 통해 팀원과 소통하고 함께 성장하여 믿을 수 있는 팀원이 되고 싶습니다.<br>
+		  다양한 협업을 통해 모두와 함께 성장하고 믿고 맡길 수 있는 팀원이 되고 싶습니다.<br>
 		  チームとコミュニケーションし、一緒に成長して信頼できるチームメンバーになりたいです。 <br>
             </p>
 
