--- a/portfolio_5_details.html
+++ b/portfolio_5_details.html
@@ -96,6 +96,9 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/web_title.png" alt="" height="400" width="600">
                 </div>
+		  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/web_0.png" alt="" height="400" width="600">
+                </div>
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/web_1.png" alt="" height="400" width="600">
                 </div>
