--- a/portfolio_5_details.html
+++ b/portfolio_5_details.html
@@ -128,7 +128,7 @@
               <h2>웹 게시판 만들기</h2>
 		  <h4>ウェブフォーラム作り</h4>
 		  
-              <p><br>JSP, Oracle DB, Tomcat 서버를 이용해 웹 게시판을 만듬<br>C#、Oracle DB、Tomcatサーバーを利用してウェブフォーラムを作成<br><br>
+              <p><br>JSP, Oracle DB, Tomcat 서버를 이용해 웹 게시판을 만듬<br>JSP、Oracle DB、Tomcatサーバーを利用してウェブフォーラムを作成<br><br>
 		  로그인을 하고 난 후 게시판에서는 익명으로 글을 등록할 수 있고<br>ログインした後、匿名で投稿することができる<br><br>
 		  admin의 경우 회원 정보와 게시판을 관리하는 기능을 구현함 <br>adminは会員情報とフォーラムを管理することができる<br><br>
               </p>
