--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             <img src="assets/img/c+.png" class="img-fluid" alt="c+" height="200" width="200">
             <img src="assets/img/cs.png" class="img-fluid" alt="c#" height="200" width="200">
             <img src="assets/img/py.png" class="img-fluid" alt="py" height="200" width="200">
+            <img src="assets/img/jsp.png" class="img-fluid" alt="py" height="200" width="200">
             <img src="assets/img/torch.png" class="img-fluid" alt="torch" height="200" width="200">
             <img src="assets/img/tf.png" class="img-fluid" alt="tf" height="200" width="200">
             <img src="assets/img/dart.png" class="img-fluid" alt="dart" height="200" width="200">
