--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@
             </div>
           </div>
 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/weather1.png" class="img-fluid" alt="pf2" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_9_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>		
+		
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/navi_0.png" class="img-fluid" alt="pf3" >
