--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -105,7 +105,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2021.11</li>
+                <li><strong>Project date</strong>: 2023.02~ </li>
               </ul>
             </div>
             <div class="portfolio-description">
