--- a/portfolio_1_details.html
+++ b/portfolio_1_details.html
@@ -125,7 +125,7 @@
               <p><br>
                 가상화폐 거래소 간의 가격 차이를 시각화하여 재정거래 및 투자에 도움을 줌 <br>暗号資産取引所間の価格差を視覚化し、裁定取引と投資に役立つ<br><br>
 		    가상화폐 뉴스 및 일정을 달력 형태로 만들어 직관적으로 파악하기 쉽도록 함 <br>暗号資産に関するニュースやスケジュールをカレンダーの形にし、直感的に把握しやすくする。<br><br>
-		    트위터와 거래소를 크롤링하여 얻은 가상화폐 공시 정보를 사용자에게 알려줌으로 투자에 도움을 줌 <br>Twitterと取引所のお知らせをクローリングして得た暗号資産の適時開示をユーザーに知らせて投資方向に役立つ<br>
+		    트위터와 거래소를 크롤링하여 얻은 가상화폐 공시 정보를 사용자에게 알려줌으로 투자에 도움을 줌 <br>Twitterと取引所のお知らせをクローリングして得た暗号資産の適時開示情報をユーザーに知らせて投資方向に役立つ<br>
               </p>
             </div>
           </div>
