--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -94,6 +94,8 @@
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/coin_1.png" alt="" height="700" width="100">
+		  <img src="assets/img/portfolio/coin_2.png" alt="" height="700" width="100">
+				
                 </div>
               </div>
               <div class="swiper-pagination"></div>
