--- a/index.html
+++ b/index.html
@@ -258,6 +258,25 @@
               </div>
             </div>
           </div>		
+	  
+		
+	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="pf1" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_10_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+		
+	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="pf1" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_11_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 		
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
