--- a/portfolio_11_details.html
+++ b/portfolio_11_details.html
@@ -51,6 +51,7 @@
           <a href="https://twitter.com/hw02391" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/people/%EB%B0%95%ED%98%84%EC%9A%B0/pfbid0z4B93kxWrffCbH1Qvt1RbYSUWThsBekDX4EkN66tZSEQJJoshkC75ZwqneFVjLThl/?mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/i02391/" class="instagram"><i class="bx bxl-instagram"></i></a>
+	  <a href="https://github.com/KensukePark" class="instagram"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
