--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -99,6 +99,9 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/coin_2.png" alt="" height="700" width="100">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/coin_3.png" alt="" height="700" width="100">
+                </div>	      
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -118,8 +121,8 @@
 		  
               <p><br>
                 가상화폐 거래소 api를 이용해 가상화폐들의 가격을 보여주고<br>暗号資産取引所apiを利用して暗号資産の価格を表示し、<br><br>
-	    포트폴리오 관리 기능을 구현할 예정<br>
-	    ポートフォリオ管理機能を作成予定<br><br>
+	    포트폴리오 관리 기능을 구현 중<br>
+	    ポートフォリオ管理機能を作成中<br><br>
               </p>
             </div>
           </div>
