--- a/portfolio_1_details.html
+++ b/portfolio_1_details.html
@@ -102,6 +102,10 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-1_4.png" alt="" height="800" width="100">
                 </div>
+		      
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-1_5.png" alt="" height="800" width="100">
+                </div>		      
 
 
 
