--- a/portfolio_1_details.html
+++ b/portfolio_1_details.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1_2.jpg" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/portfolio-1_2.png" alt="" height="800" width="100">
                 </div>
 
                 <div class="swiper-slide">
