--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -74,7 +74,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>가상화폐 가격 조회 및 포트폴리오 어플</h2>
+          <h2>가상화폐 포트폴리오 어플</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -94,13 +94,16 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/coin_1.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/coin_wallet_app_01.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/coin_2.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/coin_wallet_app_02.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/coin_3.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/coin_wallet_app_03.png" alt="" height="700" width="100">
+                </div>	      
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/coin_wallet_app_04.png" alt="" height="700" width="100">
                 </div>	      
               </div>
               <div class="swiper-pagination"></div>
@@ -112,17 +115,17 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2023.03~ </li>
+                <li><strong>Project date</strong>: 2023.04 ~ 2023.05 </li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>가상화폐 가격 조회 및 포트폴리오 어플</h2>
-		  <h4>暗号資産の価格照会およびポートフォリオアプリ</h4>
+              <h2>가상화폐 포트폴리오 어플</h2>
+		  <h4>暗号資産ポートフォリオアプリ</h4>
 		  
               <p><br>
                 가상화폐 거래소 api를 이용해 가상화폐들의 가격을 보여주고<br>暗号資産取引所apiを利用して暗号資産の価格を表示し、<br><br>
-	    포트폴리오 관리 기능을 구현 중<br>
-	    ポートフォリオ管理機能を作成中<br><br>
+	    포트폴리오 관리 기능을 구현함<br>
+	    ポートフォリオ管理機能を作成<br><br>
               </p>
             </div>
           </div>
