--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -123,9 +123,10 @@
 		  <h4>暗号資産ポートフォリオアプリ</h4>
 		  
               <p><br>
-                가상화폐 거래소 api를 이용해 가상화폐들의 가격을 보여주고<br>暗号資産取引所apiを利用して暗号資産の価格を表示し、<br><br>
-	    포트폴리오 관리 기능을 구현함<br>
-	    ポートフォリオ管理機能を作成<br><br>
+                가상화폐 거래소 api를 이용해 가상화폐들의 가격을 보여주고<br>
+		暗号資産取引所apiを利用して暗号資産の価格を表示し、<br><br>
+	        암호회폐를 매수 및 매도하는 기능을 통해 자신의 포트폴리오를 만들고 관리할 수 있는 어플리케이션<br>
+	        暗号資産を売買する機能により、自分のポートフォリオを作成·管理できるアプリケーション<br><br>
               </p>
             </div>
           </div>
