--- a/portfolio_11_details.html
+++ b/portfolio_11_details.html
@@ -109,7 +109,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2023.05 ~ </li>
+                <li><strong>Project date</strong>: 2023.05</li>
               </ul>
             </div>
             <div class="portfolio-description">
