--- a/portfolio_11_details.html
+++ b/portfolio_11_details.html
@@ -94,10 +94,16 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">		      
 		<div class="swiper-slide">
-                  <img src="assets/img/portfolio/music_player_01.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/music_player_app_01.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/music_player_02.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/music_player_app_02.png" alt="" height="700" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/music_player_app_03.png" alt="" height="700" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/music_player_app_04.png" alt="" height="700" width="100">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
