--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -74,7 +74,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>포럼 만들기</h2>
+          <h2>중고거래 어플</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -123,13 +123,12 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>로컬DB 및 FireBase를 이용한 포럼</h2>
-		  <h4>ローカルDB及びFireBaseを利用したメモ</h4>
+              <h2>중고거래 어플</h2>
+		  <h4>フリマアプリ</h4>
 		  
-              <p><br>
-                SharedPreferences를 이용해 로컬에 데이터를 저장하는 방식의 버전<br>SharePreferencesを利用してローカルにデータを保存するバージョン<br><br>
-		    Firebase를 이용해 데이터를 저장하는 방식의 버전<br>Firebaseを利用してデータを保存するバージョン<br><br>
-		    두 가지 버전을 모두 구현하여 장단점을 확인함 <br>両方のバージョンを作って長所と短所を確認した<br>
+              <p><br
+		    Firebase를 이용해 회원가입, 로그인, 물건 등록 등의 기능을 구현<br>Firebaseを利用して会員登録、ログイン、物件登録などの機能を作成<br><br>
+		    등록된 물건들을 조회 및 관심목록에 등록할 수 있음. <br>登録された物を見てほしい物リストに登録できる<br>
               </p>
             </div>
           </div>
