--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -95,16 +95,22 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sns_1_1.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_01.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sns_1.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_02.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sns_2.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_03.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sns_3.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_04.png" alt="" height="700" width="100">
+                </div>
+		 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/shop_app_05.png" alt="" height="700" width="100">
+                </div>
+		 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/shop_app_06.png" alt="" height="700" width="100">
                 </div>
 
 
