--- a/portfolio_1_details.html
+++ b/portfolio_1_details.html
@@ -117,10 +117,11 @@
 
           <div class="col-lg-5">
             <div class="portfolio-info">
-              <h3>Project information <a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a> </h3> 
+              <h3>Project information </h3> 
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2021.12 ~ 2022.04</li>
+		<a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
