--- a/portfolio_1_details.html
+++ b/portfolio_1_details.html
@@ -121,7 +121,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2021.12 ~ 2022.04</li>
-		<a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a>
+		<li><strong>Link</strong>: <a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
