--- a/portfolio_10_details.html
+++ b/portfolio_10_details.html
@@ -116,6 +116,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2023.04 ~ 2023.05 </li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Cryptocurrency_Wallet_App" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
