--- a/portfolio_11_details.html
+++ b/portfolio_11_details.html
@@ -116,6 +116,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2023.05</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Music_Player_App" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
