--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -125,7 +125,8 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2021.11</li>
+                <li><strong>Project date</strong>: 2023.06 ~ </li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/trading_stuff_app" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
