--- a/portfolio_3_details.html
+++ b/portfolio_3_details.html
@@ -117,6 +117,7 @@
               <ul>
                 <li><strong>Category</strong>: C Program</li>
                 <li><strong>Project date</strong>: 2022.05</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/subway_navigation" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
