--- a/portfolio_4_details.html
+++ b/portfolio_4_details.html
@@ -117,6 +117,7 @@
               <ul>
                 <li><strong>Category</strong>: C# Program</li>
                 <li><strong>Project date</strong>: 2017.11</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/cs_notepad_2017_backup" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
