--- a/portfolio_7_details.html
+++ b/portfolio_7_details.html
@@ -114,6 +114,7 @@
               <ul>
                 <li><strong>Category</strong>: C program</li>
                 <li><strong>Project date</strong>: 2021.11</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/gomoku_game" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
