--- a/portfolio_8_details.html
+++ b/portfolio_8_details.html
@@ -117,6 +117,7 @@
               <ul>
                 <li><strong>Category</strong>: Deep Learning</li>
                 <li><strong>Project date</strong>: 2022.12</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Emotion_Recognition_Model" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
