--- a/portfolio_9_details.html
+++ b/portfolio_9_details.html
@@ -110,6 +110,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2023.01</li>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/weather_app" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
