--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="pf1" height="600" width="450">
               <div class="portfolio-links">
-                <a href="javascript:Frameset('portfolio_1_details.html')" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio_1_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
