--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="pf1" height="600" width="450">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="inubit" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_1_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -253,7 +253,7 @@
 
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/crypto_wallet_01.png" class="img-fluid" alt="pf1" height="600" width="450">
+              <img src="assets/img/portfolio/crypto_wallet_01.png" class="img-fluid" alt="coin_wallet" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_10_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -262,7 +262,7 @@
 		
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/weather_forecast_app_01.png" class="img-fluid" alt="pf2" height="600" width="450">
+              <img src="assets/img/portfolio/weather_forecast_app_01.png" class="img-fluid" alt="weather_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_9_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -271,7 +271,7 @@
 		
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/music_player_app_01.png" class="img-fluid" alt="pf1" height="600" width="450">
+              <img src="assets/img/portfolio/music_player_app_01.png" class="img-fluid" alt="music_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_11_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -282,7 +282,7 @@
 	  
 	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/shop_app_03.png" class="img-fluid" alt="pf2" height="600" width="450">
+              <img src="assets/img/portfolio/shop_app_03.png" class="img-fluid" alt="shopping_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_2_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -291,7 +291,7 @@
 			
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/navi_0.png" class="img-fluid" alt="pf3" >
+              <img src="assets/img/portfolio/navi_0.png" class="img-fluid" alt="navi" >
               <div class="portfolio-links">
                 <a href="portfolio_3_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -301,7 +301,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/emnist_title.png" class="img-fluid" alt="emnist">
+              <img src="assets/img/portfolio/emnist_title.png" class="img-fluid" alt="alpha_recog">
               <div class="portfolio-links">
                 <a href="portfolio_6_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -310,7 +310,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fer_title.png" class="img-fluid" alt="emnist">
+              <img src="assets/img/portfolio/fer_title.png" class="img-fluid" alt="emotion_recog">
               <div class="portfolio-links">
                 <a href="portfolio_8_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -319,7 +319,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/omok1.png" class="img-fluid" alt="emnist">
+              <img src="assets/img/portfolio/omok1.png" class="img-fluid" alt="gomoku">
               <div class="portfolio-links">
                 <a href="portfolio_7_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -329,7 +329,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/memo0.png" class="img-fluid" alt="pf4">
+              <img src="assets/img/portfolio/memo0.png" class="img-fluid" alt="memo">
               <div class="portfolio-links">
                 <a href="portfolio_4_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -341,7 +341,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/web_title.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/web_title.png" class="img-fluid" alt="web">
               <div class="portfolio-links">
                 <a href="portfolio_5_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
