--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -119,7 +119,7 @@
                   <img src="assets/img/portfolio/shop_app_10.png" alt="" height="700" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/shop_app_02.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_02.jpg" alt="" height="700" width="100">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
