--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -142,8 +142,8 @@
               <p><br>
 		    Flutter 프레임워크 기반의 Firebase DB를 이용한 중고거래 어플리케이션을 설계, 개발함<br>
 		    FlutterとFirebaseに基づいてフリマアプリケーションを設計、開発<br><br>
-		    이메일 주소를 통한 회원가입을 진행한 후 <br>
-		    メールアドレスで会員登録をした後 <br><br>
+		    이메일 주소와 전화번호 인증을 통한 회원가입을 진행한 후 <br>
+		    メールアドレスと電話番号で会員登録をした後 <br><br>
 		    판매글을 등록할 수 있고 등록된 글들을 조회, 검색, 관심목록에 추가할 수 있음 <br>
 		    商品を登録でき、登録された商品を検索、確認、ほしい物リストに追加できる <br>
 		      
