--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -104,17 +104,20 @@
                   <img src="assets/img/portfolio/shop_app_05.png" alt="" height="700" width="100">
                 </div>
 		 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/shop_app_06.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_06_new.png" alt="" height="700" width="100">
                 </div>
 		 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/shop_app_07.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_06_01_new.png" alt="" height="700" width="100">
                 </div>
 		 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/shop_app_08.png" alt="" height="700" width="100">
+                  <img src="assets/img/portfolio/shop_app_07_new.png" alt="" height="700" width="100">
                 </div>
 		<div class="swiper-slide">		
-                  <img src="assets/img/portfolio/shop_app_09_temp.png" alt="" height="700" width="100">
-                </div>	      
+                  <img src="assets/img/portfolio/shop_app_08_new.png" alt="" height="700" width="100">
+                </div>
+		<div class="swiper-slide">		
+                  <img src="assets/img/portfolio/shop_app_09_new.png" alt="" height="700" width="100">
+                </div>
 		<div class="swiper-slide">
                   <img src="assets/img/portfolio/shop_app_10.png" alt="" height="700" width="100">
                 </div>
