--- a/portfolio_12_details.html
+++ b/portfolio_12_details.html
@@ -67,7 +67,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>INUBIT 팀 프로젝트</h2>
+          <h2>TFT Stats App</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -120,13 +120,13 @@
               <h3>Project information </h3> 
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2021.12 ~ 2022.04</li>
+                <li><strong>Project date</strong>: 2023.07 ~ </li>
 		<li><strong>Link</strong>: <a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>한눈에 보는 가상화폐 투자 정보 앱</h2>
-		  <h4>一目で分かる暗号資産投資情報アプリ</h4>
+              <h2>TFT(롤토체스) 어플리케이션</h2>
+		  <h4>TFT(チームファイト タクティクス) アプリ</h4>
 		  
               <p><br>
                 가상화폐 거래소 간의 가격 차이를 시각화하여 재정거래 및 투자에 도움을 줌 <br>暗号資産取引所間の価格差を視覚化し、裁定取引と投資に役立つ<br><br>
