--- a/portfolio_12_details.html
+++ b/portfolio_12_details.html
@@ -113,7 +113,7 @@
 		  <h4>TFT(チームファイト タクティクス) アプリ</h4>
 		  
               <p><br>
-                11 <br>暗号資産取引所間の価格差を視覚化し、裁定取引と投資に役立つ<br><br>
+                Riot Games 사의 API를 이용한 TFT(롤토체스) 어플리케이션 <br>暗号資産取引所間の価格差を視覚化し、裁定取引と投資に役立つ<br><br>
 		  22 <br>暗号資産に関するニュースやスケジュールをカレンダーの形にし、直感的に把握しやすくする。<br><br>
 		   33 <br>Twitterと取引所のお知らせをクローリングして得た暗号資産の適時開示情報をユーザーに知らせて投資方向に役立つ<br>
               </p>
