--- a/portfolio_12_details.html
+++ b/portfolio_12_details.html
@@ -105,7 +105,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2023.07 ~ </li>
-		<li><strong>Link</strong>: <a href="https://github.com/rigondo/pre_coin_prepare" class="myButton">Github Link</a>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/TFT_App" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
