--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             <h3>FrontEnd Developer</h3>
             <p class="">
 		<br>
-              안녕하세요.다양한 언어를 공부하는 것을 좋아하는 신입 개발자 박현우입니다.<br> 
-		  始めまして.多様なプログラミング言語を勉強するのが好きな新入IT開発者パクヒョンウです。<br> <br>
-		  무엇인가에 집중하면 끝까지 포기하지 않고 도전하여 성장하는 사람입니다. <br>
-		  何かに夢中になれば最後まで諦めずに挑戦して成長する人です。 <br> <br>
-		  다양한 협업을 통해 모두와 함께 성장하고 믿고 맡길 수 있는 팀원이 되고 싶습니다.<br>
-		  チームとコミュニケーションし、一緒に成長して信頼できるチームメンバーになりたいです。 <br>
+              안녕하세요.다양한 분야를 배우는 것을 좋아하는 신입 개발자 박현우입니다.<br> 
+		  始めまして. 多様な分野を学ぶことが好きな好きな新入IT開発者パクヒョンウです。<br> <br>
+		  자신의 일에 책임감을 갖고 끝까지 포기하지 않고 도전하여 성장하는 사람입니다 <br>
+		  自分の仕事に責任感を持って最後まで諦めずに挑戦して成長する人です。<br> <br>
+		  다양한 협업을 통해 모두와 함께 성장하 믿고 맡길 수 있는 팀원이 되고 싶습니다.<br>
+		  多様な協業を通じて一緒に成長して信頼できるチームメンバーになりたいです。 <br>
             </p>
 
 		<p class="">
