--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= 포트폴리오 코드 부분 Portfolio Section ======= -->
+    <!-- ======= 포트폴리오(프로젝트) 코드 부분 Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
