--- a/index.html
+++ b/index.html
@@ -269,6 +269,15 @@
               </div>
             </div>
           </div>
+
+	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/period_1.png" class="img-fluid" alt="shopping_app" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_13_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 		
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
