--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 		
 	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/tft_main.png" class="img-fluid" alt="shopping_app" height="600" width="450">
+              <img src="assets/img/portfolio/tft_main.png" class="img-fluid" alt="tft_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_12_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -272,7 +272,7 @@
 
 	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/period_1.png" class="img-fluid" alt="shopping_app" height="600" width="450">
+              <img src="assets/img/portfolio/period_1.png" class="img-fluid" alt="period_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_13_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
