--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -67,7 +67,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>TFT Stats App</h2>
+          <h2>Period Calendar App</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -105,15 +105,15 @@
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
                 <li><strong>Project date</strong>: 2023.07 ~ </li>
-		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/TFT_App" class="myButton">Github Link</a>
+		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Period_Calendar_App" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>TFT(롤토체스) 어플리케이션</h2>
-		  <h4>TFT(チームファイト タクティクス) アプリ</h4>
+              <h2>생리 주 어플리케이션</h2>
+		  <h4>生理管理アプリ</h4>
 		  
               <p><br>
-                Riot Games 사의 API를 이용하여 만든 TFT(롤토체스) 어플리케이션 <br>Riot Games社のAPIを利用して作ったTFT(チームファイト タクティクス)アプリケーション<br><br>
+                생리 정보를 기록하여 월경일, 배란일, 가임일 등을 예측할 수 있는 생리주기 어플 <br>生理情報を記録して月経日、排卵日、妊娠日などを予測できる生理管理アプリケーション<br><br>
               </p>
             </div>
           </div>
