--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -90,7 +90,12 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/period_1.png" alt="" height="800" width="100">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/period_temp_cal_page.png" alt="" height="800" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/period_temp_home_page.png" alt="" height="800" width="100">
+                </div>
                 
               </div>
               <div class="swiper-pagination"></div>
