--- a/portfolio_14_details.html
+++ b/portfolio_14_details.html
@@ -88,15 +88,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_1.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/img_classification_main.png" alt="" height="800" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_temp_home_page.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/img_classification_01.png" alt="" height="800" width="100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_temp_cal_page.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/img_classification_02.png" alt="" height="800" width="100">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/img_classification_03.png" alt="" height="800" width="100">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/img_classification_04.png" alt="" height="800" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/img_classification_05.png" alt="" height="800" width="100">
+                </div>		      
+		      
               </div>
               <div class="swiper-pagination"></div>
             </div>
