--- a/index.html
+++ b/index.html
@@ -287,6 +287,17 @@
               </div>
             </div>
           </div>
+
+
+	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/img_classification_main.png" class="img-fluid" alt="period_app" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_14_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
 		
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
