--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -112,7 +112,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>생리 주기 어플리케이션</h2>
+              <h2>생리 주기 관리 어플리케이션</h2>
 		  <h4>生理管理アプリ</h4>
 		  
               <p><br>
