--- a/portfolio_14_details.html
+++ b/portfolio_14_details.html
@@ -119,7 +119,7 @@
               <h3>Project information </h3> 
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2023.09 ~ </li>
+                <li><strong>Project date</strong>: 2023.09 </li>
 		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Image_classification_app" class="myButton">Github Link</a>
               </ul>
             </div>
