--- a/portfolio_14_details.html
+++ b/portfolio_14_details.html
@@ -67,7 +67,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Period Calendar App</h2>
+          <h2>Image classification app</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
