--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -88,15 +88,20 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_1.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_main_final.png" alt="" height="800" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_temp_home_page.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_home_temp_02" alt="" height="800" width="100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/period_temp_cal_page.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_cal_temp_02" alt="" height="800" width="100">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/per_stat_temp_02" alt="" height="800" width="100">
+                </div>
+		      
               </div>
               <div class="swiper-pagination"></div>
             </div>
