--- a/portfolio_15_details.html
+++ b/portfolio_15_details.html
@@ -88,10 +88,10 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/text_recog_app_01.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/text_recog_app_01.jpg" alt="" height="800" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/text_recog_app_02.png" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/text_recog_app_02.jpg" alt="" height="800" width="100">
                 </div>
 		      
               </div>
