--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -91,15 +91,15 @@
                   <img src="assets/img/portfolio/per_main_final.png" alt="" height="800" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/per_home_temp_02" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_home_temp_02.png" alt="" height="800" width="100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/per_cal_temp_02" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_cal_temp_02.png" alt="" height="800" width="100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/per_stat_temp_02" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/per_stat_temp_02.png" alt="" height="800" width="100">
                 </div>
 		      
               </div>
