--- a/index.html
+++ b/index.html
@@ -298,6 +298,14 @@
             </div>
           </div>
 
+	 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/text_recog_app_01.jpg" class="img-fluid" alt="period_app" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_15_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 		
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
