text recognition manage

--- a/portfolio_15_details.html
+++ b/portfolio_15_details.html
@@ -114,6 +114,9 @@
               <p><br>
                 구글사의 머신러닝 키트 라이브러리를 이용하여 실시간으로 카메라에 찍힌 글자를 인식한 결과를 출력하는 어플<br>
                 Google社のマシンラーニングキットライブラリを利用してリアルタイムでカメラに撮られた文字を認識した結果を示すアプリ<br><br>
+
+		이번 프로젝트를 통해 실시간 가격 환전 앱 제작을 이어서 준비 중<br>
+		今回のプロジェクトを通じてリアルタイム価格両替アプリの制作を続けて準備中<br><br>
               </p>
             </div>
           </div>
