--- a/index.html
+++ b/index.html
@@ -241,17 +241,16 @@
 
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+		
+	 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="inubit" height="600" width="450">
+              <img src="assets/img/portfolio/text_recog_app_main.png" class="img-fluid" alt="period_app" height="600" width="450">
               <div class="portfolio-links">
-                <a href="portfolio_1_details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio_16_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 	
-	  
 	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/shop_app_03.png" class="img-fluid" alt="shopping_app" height="600" width="450">
@@ -278,7 +277,14 @@
               </div>
             </div>
           </div>
-		
+	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="inubit" height="600" width="450">
+              <div class="portfolio-links">
+                <a href="portfolio_1_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>	
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/crypto_wallet_01.png" class="img-fluid" alt="coin_wallet" height="600" width="450">
