--- a/portfolio_16_details.html
+++ b/portfolio_16_details.html
@@ -67,7 +67,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Live text recognition app</h2>
+          <h2>Live exchange rate app</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
