--- a/portfolio_16_details.html
+++ b/portfolio_16_details.html
@@ -117,6 +117,9 @@
 
             		다른 나라 통화로 환전한 가격을 사용자에게 알려주는 어플<br>
             		他国の通貨に両替した価格をユーザーに知らせるアプリ<br><br>
+
+		Rest API를 이용해 한국은행에서 가장 최근 영업일의 환율 데이터를 받아옴 <br>
+		Rest APIを使用して韓国銀行から最新の営業日の為替レートデータを受け取る <br><br>
               </p>
             </div>
           </div>
