Image classification app

--- a/portfolio_14_details.html
+++ b/portfolio_14_details.html
@@ -128,6 +128,8 @@
 		  <h4>画像分類アプリ</h4>
               <p><br>
                 TensorFlow Lite 라이브러리를 통해 사물 데이터셋을 학습하여 이미지 분류 모델을 만들어 봄<br>TensorFlow Liteライブラリを通じて物のデータセットを学習し、イメージ分類モデルを作成する<br><br>
+
+		추후 플리마켓 어플의 판매할 물건의 이미지를 추가할 때 카테고리 분류 기능으로 도입할 예정 <br> 今後、フリマアプリで販売する物件のイメージを追加する際、カテゴリーおすすめ機能として導入する予定　<br><br>
               </p>
             </div>
           </div>
