--- a/portfolio_16_details.html
+++ b/portfolio_16_details.html
@@ -88,10 +88,13 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/currency_app_01.jpg" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/live_currency_usd.jpg" alt="" height="800" width="100">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/currency_app_02.jpg" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/live_currency_jpy.jpg" alt="" height="800" width="100">
+                </div>
+		<div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_krw.jpg" alt="" height="800" width="100">
                 </div>
 		      
               </div>
