Live exchange rate app

--- a/portfolio_16_details.html
+++ b/portfolio_16_details.html
@@ -96,7 +96,15 @@
 		<div class="swiper-slide">
                   <img src="assets/img/portfolio/live_currency_krw.jpg" alt="" height="800" width="100">
                 </div>
-		      
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_error.jpg" alt="" height="800" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_drawer.jpg" alt="" height="800" width="100">
+                </div>
+		<div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_user.jpg" alt="" height="800" width="100">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
