--- a/portfolio_13_details.html
+++ b/portfolio_13_details.html
@@ -106,31 +106,26 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
-
           <div class="col-lg-5">
             <div class="portfolio-info">
               <h3>Project information </h3> 
               <ul>
                 <li><strong>Category</strong>: Flutter Application</li>
-                <li><strong>Project date</strong>: 2023.09 ~ </li>
+                <li><strong>Project date</strong>: 2023.09 </li>
 		<li><strong>Link</strong>: <a href="https://github.com/KensukePark/Period_Calendar_App" class="myButton">Github Link</a>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>생리 주기 관리 어플리케이션</h2>
 		  <h4>生理管理アプリ</h4>
-		
               <p><br>
                 생리 정보를 기록하여 월경일, 배란일, 가임일 등을 예측할 수 있는 생리주기 어플 <br>生理情報を記録して月経日、排卵日、妊娠日などを予測できる生理管理アプリケーション<br><br>
               </p>
             </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- End Portfolio Details Section -->
-
   </main><!-- End #main -->
 
 
