--- a/portfolio_16_details.html
+++ b/portfolio_16_details.html
@@ -94,16 +94,16 @@
                   <img src="assets/img/portfolio/live_currency_jpy.jpg" alt="" height="800" width="100">
                 </div>
 		<div class="swiper-slide">
-                  <img src="assets/img/portfolio/live_currency_krw.jpg" alt="" height="800" width="100">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/live_currency_error.jpg" alt="" height="800" width="100">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/live_currency_drawer.jpg" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/live_currency_drawer.png" alt="" height="800" width="100">
                 </div>
 		<div class="swiper-slide">
-                  <img src="assets/img/portfolio/live_currency_user.jpg" alt="" height="800" width="100">
+                  <img src="assets/img/portfolio/live_currency_rate.png" alt="" height="800" width="100">
+                </div>
+		<div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_user.png" alt="" height="800" width="100">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/live_currency_error.png" alt="" height="800" width="100">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
