--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 			<li><i class="bi bi-chevron-right"></i> <strong>BirthDay:</strong> <span>1997.01.10</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+82-10-9179-4148</span></li>
 			<li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>iu4148@gmail.com</span></li>
+		<li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/KensukePark</span></li>
                 </ul>
               </div>
             </div>
