--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <img src="assets/img/jsp.png" class="img-fluid" alt="py" height="200" width="200">
             <img src="assets/img/torch.png" class="img-fluid" alt="torch" height="200" width="200">
             <img src="assets/img/tf.png" class="img-fluid" alt="tf" height="200" width="200">
+	    <img src="assets/img/kotlin.png" class="img-fluid" alt="tf" height="200" width="200">	  	  
             <img src="assets/img/dart.png" class="img-fluid" alt="dart" height="200" width="200">
             <img src="assets/img/flutter.png" class="img-fluid" alt="flutter" height="200" width="200">
             <img src="assets/img/mat.png" class="img-fluid" alt="mat" height="200" width="200">
