--- a/index.html
+++ b/index.html
@@ -167,6 +167,38 @@
           </div>
 
         </div>
+	<div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <span>C언어 기반의 자료구조 및 알고리즘 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>C言語 基盤の資料構造、アルゴリズム履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>C++ 기본 지식 및 Opengl을 이용한 그래픽스 작업 경험이 있음</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>C++ 基本知識、Openglを利用したグラフィックス作業経験有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>C#을 이용한 윈도우즈 프로그래밍 작업 경험이 있음</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>C#を利用したWindowsプログラミング作業の経験有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Python을 이용해 데이터 통계 분석 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Pythonを利用してデータ統計分析技術有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Python과 PyTorch를 이용해 신경망 및 딥러닝 프로젝트 경험이 있음</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>PythonとPyTorchを利用してニューラルネットワーク、ディープラーニングプロジェクトの経験有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Python을 이용해 웹 크롤링, 웹 스크래핑, 트위터 크롤링 기반의 프로젝트 경험이 있음</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Pythonを利用したWebクローリング、Webスクレイピング、Twitterクローリング基盤のプロジェクト経験有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Matlab을 사용한 계산 과학 및 시뮬레이션 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Matlabを使用した計算科学、シミュレーション授業履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Java 교과목 이수를 통해 기 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Java科目履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Jsp 및 Oracle을 이용한 웹 프로그래밍 교과목 이수</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>JspとOracleを利用したWebプログラミング履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Dart(flutter)언어 기반의 다수의 프로젝트를 진행한 경험이 있음</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Dart(flutter)を利用した多様なアプリケーションを作成経験有り</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>UNIX/LINUX 프로그래밍 관련 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>UNIX/LINUXプログラミング履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>소프트웨어 모델링 교과목 이수를 통해 관련 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>ソフトウェアモデリング履修済み</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>데이터통신 및 정보보호론 교과목 이수를 통해 네트워크와 정보보안 관련 지식을 보유함</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>データ通信、情報保護論の科目履修を通じてネットワークと情報セキュリティについた関連知識有り</span></li>
+                </ul>
+              </div>
+            </div>      
 
       </div>
     </section><!-- End Skills Section -->
