--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
                   <li><span>C++ 기본 지식 및 Opengl을 이용한 그래픽스 작업 경험이 있음</span></li>
                   <li><span>C++ 基本知識、Openglを利用したグラフィックス作業経験有り</span></li>
                   <li><span>C#을 이용한 윈도우즈 프로그래밍 작업 경험이 있음</span></li>
-                  <li><span>C#を利用したWindowsプログラミング作業の経験有り</span></li>
+                  <li><span>C#を利用したWindowsプログラミング作業の経験有り</span></li>                 
+		  <li><span>Dart(flutter)언어를 이용한 다수의 어플리케이션을 설계·개발한 경험이 있음</span></li>
+                  <li><span>Dart(flutter)を利用した多様なアプリケーションを作成経験有り</span></li>
+		  <li><span>Kotlin을 이용한 안드로이드 어플리케이션 프로그래밍 지식 보유</span></li>
+		  <li><span>Kotlinを利用したアンドロイドアプリケーションプログラミング知識有り</span></li>
                   <li><span>Python을 이용해 데이터 통계 분석 지식을 보유함</span></li>
                   <li><span>Pythonを利用してデータ統計分析技術有り</span></li>
                   <li><span>Python과 PyTorch를 이용해 신경망 및 딥러닝 프로젝트 경험이 있음</span></li>
@@ -189,8 +193,6 @@
                   <li><span>Java科目履修済み</span></li>
                   <li><span>Jsp 및 Oracle을 이용한 웹 프로그래밍 교과목 이수</span></li>
                   <li><span>JspとOracleを利用したWebプログラミング履修済み</span></li>
-                  <li><span>Dart(flutter)언어 기반의 다수의 프로젝트를 진행한 경험이 있음</span></li>
-                  <li><span>Dart(flutter)を利用した多様なアプリケーションを作成経験有り</span></li>
                   <li><span>UNIX/LINUX 프로그래밍 관련 지식을 보유함</span></li>
                   <li><span>UNIX/LINUXプログラミング履修済み</span></li>
                   <li><span>소프트웨어 모델링 교과목 이수를 통해 관련 지식을 보유함</span></li>
