--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   <li><span>Pythonを利用したWebクローリング、Webスクレイピング、Twitterクローリング基盤のプロジェクト経験有り</span></li>
                   <li><span>Matlab을 사용한 계산 과학 및 시뮬레이션 지식을 보유함</span></li>
                   <li><span>Matlabを使用した計算科学、シミュレーション授業履修済み</span></li>
-                  <li><span>Java 교과목 이수를 통해 기 지식을 보유함</span></li>
+                  <li><span>Java 교과목 이수를 통해 기본 지식을 보유함</span></li>
                   <li><span>Java科目履修済み</span></li>
                   <li><span>Jsp 및 Oracle을 이용한 웹 프로그래밍 교과목 이수</span></li>
                   <li><span>JspとOracleを利用したWebプログラミング履修済み</span></li>
