--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           </div>
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="inubit" height="600" width="450">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="inubit_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_1_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -324,7 +324,7 @@
           </div>	
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/crypto_wallet_01.png" class="img-fluid" alt="coin_wallet" height="600" width="450">
+              <img src="assets/img/portfolio/crypto_wallet_01.png" class="img-fluid" alt="coin_wallet_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_10_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
