--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/web_title.png" class="img-fluid" alt="web">
+              <img src="assets/img/portfolio/web_title.png" class="img-fluid" alt="web_jsp_project1">
               <div class="portfolio-links">
                 <a href="portfolio_5_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
