--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
 	   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/img_classification_main.png" class="img-fluid" alt="period_app" height="600" width="450">
+              <img src="assets/img/portfolio/img_classification_main.png" class="img-fluid" alt="image_classify_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_14_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -352,7 +352,7 @@
 
 	 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/text_recog_app_main.png" class="img-fluid" alt="period_app" height="600" width="450">
+              <img src="assets/img/portfolio/text_recog_app_main.png" class="img-fluid" alt="text_recog_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_15_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -361,7 +361,7 @@
 		
 	  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/music_player_app_01.png" class="img-fluid" alt="music_app" height="600" width="450">
+              <img src="assets/img/portfolio/music_player_app_01.png" class="img-fluid" alt="music_player_app" height="600" width="450">
               <div class="portfolio-links">
                 <a href="portfolio_11_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -370,7 +370,7 @@
 			
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/navi_0.png" class="img-fluid" alt="navi" >
+              <img src="assets/img/portfolio/navi_0.png" class="img-fluid" alt="navi">
               <div class="portfolio-links">
                 <a href="portfolio_3_details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
