--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <a href="https://www.facebook.com/people/%EB%B0%95%ED%98%84%EC%9A%B0/pfbid0z4B93kxWrffCbH1Qvt1RbYSUWThsBekDX4EkN66tZSEQJJoshkC75ZwqneFVjLThl/?mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/i02391/" class="instagram"><i class="bx bxl-instagram"></i></a>
 	  <a href="https://github.com/KensukePark" class="instagram"><i class="bx bxl-github"></i></a>
+	  <a href="https://velog.io/@lilak1007" class="velog"><i class="bx bxl-venmo"></i></a>
         </div>
       </div>
 
@@ -121,6 +122,9 @@
 			<li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>iu4148@gmail.com</span></li>
 		<li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>
 			<a href="https://github.com/KensukePark" class="git_link">https://github.com/KensukePark</a></span></li>
+		<li><i class="bi bi-chevron-right"></i> <strong>Blog:</strong> <span>
+			<a href="https://velog.io/@lilak1007" class="git_link">https://velog.io/@lilak1007</a></span></li>
+			
                 </ul>
               </div>
             </div>
