--- a/portfolio_2_details.html
+++ b/portfolio_2_details.html
@@ -4,7 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <SCRIPT LANGUAGE="JavaScript">
+  function Frameset(page) {
+  framecode = "<frameset rows='1*'>"
+  + "<frame name=main src='" + page + "'>"
+  + "</frameset>";
+  page = window.open("");
+  page.document.open();
+  page.document.write(framecode);
+  page.document.close();
+  }
+  </script>
   <title>ParkHyunWoo's Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
